# hybrid-obsidian-mcp

./: .gitignore  CLAUDE.md  MCP_SERVER.md  README.md  com.obsidian.search-watcher.plist  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml
docs/: architecture.md  bulk-tagging.md  cli.md  configuration.md  deployment.md  development.md  faq.md  index.md  mcp-tools.md  quickstart.md  search-tuning.md  troubleshooting.md
logs/tag-run/: aggregate.py  aggregated.json  all_changes.json  apply_results.json  build_batches.py  notes.json  pilot.txt  pilot_changes.json  review.py  taxonomy_final.json  taxonomy_seed.json  taxonomy_v1.json  verify.py
logs/tag-run/batches/: batch_00.json  batch_01.json  batch_02.json  batch_03.json  batch_04.json  batch_05.json  batch_06.json  batch_07.json  batch_08.json  batch_09.json  batch_10.json  batch_11.json
logs/tag-run/results/: batch_00.json  batch_01.json  batch_02.json  batch_03.json  batch_04.json  batch_05.json  batch_06.json  batch_07.json  batch_08.json  batch_09.json  batch_10.json  batch_11.json
src/: cache_stats.py  cli.py  config.py  embeddings.py  indexer.py  nas_sync.py  opensearch_client.py  reranker.py  searcher.py  server.py  tagger.py  vault_parser.py  watcher.py  writer.py
tests/: README.md  test_cache_stats.py  test_embed_cache.py  test_embeddings.py  test_graph_neighbors.py  test_opensearch_client.py  test_reranker.py  test_searcher_filters.py  test_server.py  test_tagger.py  test_vault_parser.py  test_writer_paths.py
