[project]
name = "hybrid-obsidian-mcp"
version = "0.1.0"
description = "MCP server providing hybrid search over Obsidian vault using OpenSearch"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "opensearch-py>=2.4.0",
    "httpx>=0.27.0",
    "python-frontmatter>=1.0.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
obsidian-mcp = "src.server:main"
