[project]
name = "hybrid-obsidian-mcp"
version = "0.2.0"
description = "MCP server for Obsidian vault management (write/management) with NAS sync"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "python-frontmatter>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "watchdog>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
obsidian-mcp = "src.server:main"
obsidian-watcher = "src.watcher:main"
obsidian-cli = "src.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
